@@ -3,3 +3,5 @@ AUTOMAKE_OPTIONS = dist-bzip2
 ACLOCAL_AMFLAGS = -I m4
 
 SUBDIRS = flumotion docs m4
+
+EXTRA_DIST = flumotion.spec
